// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Listings — anonymous mode padding (Spec 001) T003: anonymous mode snapshot shows only padding change, nothing else (FR-005) 1`] = `
<DocumentFragment>
  <div
    class="bg-[#F2E8D5] min-h-screen"
  >
    <div>
      <div
        class="container mx-auto px-6 lg:px-12 pt-8"
        data-testid="forest-command-zone"
        style="background: rgb(26, 60, 40); position: relative; overflow: visible;"
      >
        <div
          class="relative pb-5 overflow-hidden"
          style="border-bottom: 1px solid rgba(242, 232, 213, 0.1);"
        >
          <div
            style="position: absolute; top: -40px; right: -40px; width: 160px; height: 160px; border-radius: 50%; background: rgba(196, 86, 42, 0.07); pointer-events: none;"
          />
          <div
            style="position: absolute; bottom: -20px; right: 80px; width: 100px; height: 100px; border-radius: 50%; background: rgba(0, 232, 122, 0.04); pointer-events: none;"
          />
          <span
            style="font-family: "IBM Plex Mono", monospace; font-size: 10px; letter-spacing: 0.18em; color: rgb(196, 86, 42); text-transform: uppercase;"
          >
            Marketplace · Property Search
          </span>
          <h1
            style="font-family: "Fraunces", serif; font-size: 28px; font-weight: 700; color: rgb(242, 232, 213); line-height: 1.1; margin: 6px 0px 4px;"
          >
            Browse Properties
          </h1>
          <p
            style="color: rgba(242, 232, 213, 0.5); font-size: 14px;"
          >
            Verified listings across Southern Africa
          </p>
        </div>
        <div
          class="flex flex-col lg:flex-row gap-1.5 p-2"
        >
          <div
            class="relative shrink-0"
          >
            <button
              aria-label="Listing category"
              class="flex items-center justify-between gap-2 w-full lg:w-auto"
              style="background: rgba(255, 255, 255, 0.06); color: rgb(242, 232, 213); border: 1px solid rgba(255, 255, 255, 0.12); border-radius: 8px; height: 44px; min-width: 130px; padding: 0px 14px; font-size: 14px; font-weight: 500;"
              type="button"
            >
              <span>
                For Sale
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down w-4 h-4 opacity-60"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="relative flex-1 min-w-0"
          >
            <div
              class="px-3 flex items-center gap-2 flex-wrap"
              style="border: 1px solid rgba(255, 255, 255, 0.14); border-radius: 8px; background: rgba(255, 255, 255, 0.04); min-height: 44px;"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-search w-4 h-4 shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="color: rgba(242, 232, 213, 0.5);"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21 21-4.34-4.34"
                />
                <circle
                  cx="11"
                  cy="11"
                  r="8"
                />
              </svg>
              <input
                class="placeholder:text-white/30 py-2.5"
                placeholder="Search location, suburb or city"
                style="background: transparent; outline: none; color: rgb(242, 232, 213); font-size: 14px; min-width: 180px; flex: 1 1 0%;"
                type="text"
                value=""
              />
            </div>
          </div>
          <button
            class="flex items-center gap-2 shrink-0 hover:opacity-90 transition-opacity"
            style="background: rgba(255, 255, 255, 0.06); border: 1px solid rgba(255, 255, 255, 0.12); color: rgb(242, 232, 213); border-radius: 8px; height: 44px; padding: 0px 18px; font-size: 14px; font-weight: 500;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-map w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"
              />
              <path
                d="M15 5.764v15"
              />
              <path
                d="M9 3.236v15"
              />
            </svg>
            Map
          </button>
          <button
            class="flex items-center gap-2 shrink-0 hover:opacity-90 transition-opacity"
            style="background: rgba(242, 232, 213, 0.08); border: 1px solid rgba(242, 232, 213, 0.2); color: rgba(242, 232, 213, 0.85); border-radius: 8px; height: 44px; padding: 0px 18px; font-size: 14px; font-weight: 600;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-mic w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 19v3"
              />
              <path
                d="M19 10v2a7 7 0 0 1-14 0v-2"
              />
              <rect
                height="13"
                rx="3"
                width="6"
                x="9"
                y="2"
              />
            </svg>
            AI Search
            <svg
              aria-hidden="true"
              class="lucide lucide-sparkles w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
              />
              <path
                d="M20 2v4"
              />
              <path
                d="M22 4h-4"
              />
              <circle
                cx="4"
                cy="20"
                r="2"
              />
            </svg>
          </button>
          <button
            class="flex items-center gap-2 shrink-0 hover:opacity-90 transition-opacity"
            style="background: rgb(196, 86, 42); color: white; border-radius: 8px; height: 44px; padding: 0px 28px; font-size: 15px; font-weight: 700;"
            type="button"
          >
            Search
          </button>
        </div>
        <div
          class="flex flex-wrap items-stretch"
          style="border-top: 1px solid rgba(242, 232, 213, 0.1);"
        >
          <div
            class="relative"
          >
            <button
              class="flex items-center gap-2 hover:bg-white/5 transition-colors"
              style="color: rgba(242, 232, 213, 0.75); border-right: 1px solid rgba(255, 255, 255, 0.07); background: transparent; height: 44px; padding: 0px 18px; font-size: 13px; font-weight: 500;"
              type="button"
            >
              Property Type
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down w-3.5 h-3.5 opacity-60"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="relative"
          >
            <button
              class="flex items-center gap-2 hover:bg-white/5 transition-colors"
              style="color: rgba(242, 232, 213, 0.75); border-right: 1px solid rgba(255, 255, 255, 0.07); background: transparent; height: 44px; padding: 0px 18px; font-size: 13px; font-weight: 500;"
              type="button"
            >
              Min Price
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down w-3.5 h-3.5 opacity-60"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="relative"
          >
            <button
              class="flex items-center gap-2 hover:bg-white/5 transition-colors"
              style="color: rgba(242, 232, 213, 0.75); border-right: 1px solid rgba(255, 255, 255, 0.07); background: transparent; height: 44px; padding: 0px 18px; font-size: 13px; font-weight: 500;"
              type="button"
            >
              Max Price
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down w-3.5 h-3.5 opacity-60"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="relative"
          >
            <button
              class="flex items-center gap-2 hover:bg-white/5 transition-colors"
              style="color: rgba(242, 232, 213, 0.75); border-right: 1px solid rgba(255, 255, 255, 0.07); background: transparent; height: 44px; padding: 0px 18px; font-size: 13px; font-weight: 500;"
              type="button"
            >
              Bedrooms
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down w-3.5 h-3.5 opacity-60"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <button
            class="flex items-center gap-2 hover:bg-white/5 transition-colors"
            style="color: rgba(242, 232, 213, 0.75); background: transparent; height: 44px; padding: 0px 18px; font-size: 13px; font-weight: 500; margin-left: auto;"
            type="button"
          >
            More Filters +
          </button>
        </div>
        <div
          class="px-4 py-2.5 flex items-center justify-between gap-4"
          style="border-top: 1px solid rgba(242, 232, 213, 0.1); background: rgba(0, 0, 0, 0.12);"
        >
          <span
            style="font-family: "IBM Plex Mono", monospace; font-size: 11px; color: rgba(242, 232, 213, 0.45);"
          >
            Enter a location and click Search to explore verified properties
          </span>
        </div>
      </div>
      <div
        class="lg:flex lg:items-start lg:gap-6 px-6 lg:px-12 py-6"
      >
        <div
          class="bg-card border border-border rounded-lg overflow-hidden h-full flex flex-col lg:flex-row overflow-x-hidden flex-1"
        >
          <div
            class="
          fixed top-0 left-0 bottom-0 z-50
          w-80 max-w-full
          overflow-y-auto overflow-x-hidden
          transition-transform duration-300 ease-out
          -translate-x-full
          p-5
        "
            style="background-color: rgb(26, 60, 40);"
          >
            <div
              class="flex items-center justify-between gap-2 mb-5"
            >
              <div>
                <p
                  class="uppercase mb-1"
                  style="font-family: "IBM Plex Mono", monospace; font-size: 9px; color: rgba(255, 255, 255, 0.5); letter-spacing: 0.12em;"
                >
                  BUILDTRUST
                </p>
                <h2
                  class="text-white text-lg font-bold flex items-center gap-2"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-funnel w-4 h-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="color: rgb(0, 232, 122);"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
                    />
                  </svg>
                  Filters
                </h2>
              </div>
              <div
                class="flex items-center gap-3"
              >
                <button
                  class="text-sm font-medium hover:opacity-80 transition-opacity"
                  style="color: rgb(0, 232, 122);"
                  type="button"
                >
                  Reset All
                </button>
                <button
                  aria-label="Close filters"
                  class="p-1.5 rounded-lg hover:bg-white/10 transition-colors"
                  title="Close filters"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-x w-5 h-5 text-white"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 6 6 18"
                    />
                    <path
                      d="m6 6 12 12"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="mb-4 pb-4"
              style="border-bottom: 1px solid rgba(255, 255, 255, 0.1);"
            >
              <label
                class="flex items-center justify-between cursor-pointer"
              >
                <div
                  class="flex items-center gap-2"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-shield w-4 h-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="color: rgb(0, 232, 122);"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                    />
                  </svg>
                  <span
                    class="text-white text-sm font-medium"
                  >
                    Verified Only
                  </span>
                </div>
                <input
                  class="toggle"
                  style="accent-color: #00E87A;"
                  type="checkbox"
                />
              </label>
            </div>
            <div
              class="mb-4 pb-4"
              style="border-bottom: 1px solid rgba(255, 255, 255, 0.1);"
            >
              <p
                class="uppercase mb-2"
                style="font-family: "IBM Plex Mono", monospace; font-size: 9px; color: rgba(255, 255, 255, 0.45); letter-spacing: 0.1em;"
              >
                BATHROOMS
              </p>
              <div
                class="space-y-3"
              >
                <div
                  class="flex items-center justify-between"
                >
                  <span
                    class="text-white/70 text-sm"
                  >
                    Min Bathrooms
                  </span>
                  <div
                    class="flex items-center gap-2"
                  >
                    <button
                      class="w-8 h-8 rounded flex items-center justify-center text-white font-bold"
                      style="border: 1px solid rgba(255, 255, 255, 0.2); background-color: rgba(255, 255, 255, 0.08);"
                      type="button"
                    >
                      −
                    </button>
                    <span
                      class="w-12 text-center text-white text-sm font-semibold"
                    >
                      0+
                    </span>
                    <button
                      class="w-8 h-8 rounded flex items-center justify-center text-white font-bold"
                      style="border: 1px solid rgba(255, 255, 255, 0.2); background-color: rgba(255, 255, 255, 0.08);"
                      type="button"
                    >
                      +
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mb-5"
            >
              <p
                class="uppercase mb-2"
                style="font-family: "IBM Plex Mono", monospace; font-size: 9px; color: rgba(255, 255, 255, 0.45); letter-spacing: 0.1em;"
              >
                FEATURES
              </p>
              <div
                class="space-y-2.5"
              >
                <label
                  class="flex items-center gap-3 cursor-pointer"
                >
                  <input
                    style="accent-color: #00E87A; width: 16px; height: 16px;"
                    type="checkbox"
                  />
                  <span
                    class="text-white/80 text-sm"
                  >
                    Pool
                  </span>
                </label>
                <label
                  class="flex items-center gap-3 cursor-pointer"
                >
                  <input
                    style="accent-color: #00E87A; width: 16px; height: 16px;"
                    type="checkbox"
                  />
                  <span
                    class="text-white/80 text-sm"
                  >
                    Garden
                  </span>
                </label>
                <label
                  class="flex items-center gap-3 cursor-pointer"
                >
                  <input
                    style="accent-color: #00E87A; width: 16px; height: 16px;"
                    type="checkbox"
                  />
                  <span
                    class="text-white/80 text-sm"
                  >
                    Pet Friendly
                  </span>
                </label>
                <label
                  class="flex items-center gap-3 cursor-pointer"
                >
                  <input
                    style="accent-color: #00E87A; width: 16px; height: 16px;"
                    type="checkbox"
                  />
                  <span
                    class="text-white/80 text-sm"
                  >
                    Security Estate
                  </span>
                </label>
              </div>
            </div>
            <div
              class="mt-6 space-y-3"
            >
              <button
                class="w-full h-11 rounded-lg font-bold text-sm flex items-center justify-center gap-2 hover:opacity-90 transition-opacity"
                style="background-color: rgb(0, 232, 122); color: rgb(12, 13, 16);"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-search w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 21-4.34-4.34"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="8"
                  />
                </svg>
                Apply Filters
              </button>
              <button
                class="w-full h-11 rounded-lg text-white font-semibold text-sm flex items-center justify-center gap-2 hover:opacity-90 transition-opacity"
                style="background-color: rgb(196, 86, 42);"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-mic w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 19v3"
                  />
                  <path
                    d="M19 10v2a7 7 0 0 1-14 0v-2"
                  />
                  <rect
                    height="13"
                    rx="3"
                    width="6"
                    x="9"
                    y="2"
                  />
                </svg>
                AI Voice Search
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sparkles w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                  />
                  <path
                    d="M20 2v4"
                  />
                  <path
                    d="M22 4h-4"
                  />
                  <circle
                    cx="4"
                    cy="20"
                    r="2"
                  />
                </svg>
              </button>
              <p
                class="text-center"
                style="font-family: "IBM Plex Mono", monospace; font-size: 10px; color: rgba(255, 255, 255, 0.35);"
              >
                Try: “3 bed house in Cape Town with pool”
              </p>
            </div>
          </div>
          <div
            class="flex-1 flex flex-col min-w-0"
          >
            <div
              class="flex-1 flex flex-col items-center justify-center p-6 md:p-12"
              style="background: rgb(242, 232, 213); position: relative; overflow: hidden;"
            >
              <div
                style="position: absolute; inset: 0; background-image: linear-gradient(rgba(26,60,40,0.04) 1px, transparent 1px), linear-gradient(90deg, rgba(26,60,40,0.04) 1px, transparent 1px); background-size: 28px 28px; pointer-events: none;"
              />
              <div
                class="max-w-2xl w-full text-center"
                style="position: relative; z-index: 1;"
              >
                <div
                  style="width: 58px; height: 58px; background: rgba(26, 60, 40, 0.07); border: 1px solid rgba(26, 60, 40, 0.18); border-radius: 15px; display: flex; align-items: center; justify-content: center; margin: 0px auto 22px;"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-shield"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="width: 26px; height: 26px; color: rgb(26, 60, 40);"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                    />
                  </svg>
                </div>
                <div
                  style="font-family: "IBM Plex Mono", monospace; font-size: 10px; letter-spacing: 0.22em; color: rgb(196, 86, 42); margin-bottom: 12px;"
                >
                  PROPERTY MARKETPLACE — VERIFIED LISTINGS
                </div>
                <h2
                  style="font-family: "Fraunces", serif; font-size: clamp(1.5rem, 3vw, 2rem); font-weight: 300; color: rgb(26, 60, 40); line-height: 1.25; margin-bottom: 12px;"
                >
                  Your 
                  <span
                    style="color: rgb(196, 86, 42);"
                  >
                    Trusted
                  </span>
                  <br />
                  Property Platform
                </h2>
                <p
                  style="font-size: 13px; color: rgba(26, 60, 40, 0.6); line-height: 1.65; max-width: 320px; margin: 0px auto 28px;"
                >
                  BuildTrust combines financial-grade transparency with real estate intelligence — protecting buyers, sellers, and diaspora investors from fraud.
                </p>
                <div
                  class="grid grid-cols-1 sm:grid-cols-3 gap-3 text-left mb-5"
                >
                  <div
                    style="background: rgb(255, 255, 255); border: 1px solid rgba(26, 60, 40, 0.1); border-top: 2.5px solid rgb(26, 60, 40); border-radius: 10px; padding: 14px 14px;"
                  >
                    <div
                      style="width: 28px; height: 28px; background: rgba(26, 60, 40, 0.08); border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 9px;"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-shield"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        style="width: 14px; height: 14px; color: rgb(26, 60, 40);"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                        />
                      </svg>
                    </div>
                    <div
                      style="font-family: "IBM Plex Mono", monospace; font-size: 8px; letter-spacing: 0.18em; color: rgb(26, 60, 40); margin-bottom: 4px;"
                    >
                      PROTECTION
                    </div>
                    <h4
                      style="font-family: "Fraunces", serif; font-size: 0.83rem; font-weight: 400; color: rgb(26, 60, 40); margin-bottom: 5px;"
                    >
                      Fraud Protection
                    </h4>
                    <p
                      style="font-size: 10px; color: rgba(26, 60, 40, 0.55); line-height: 1.5;"
                    >
                      Verified against title deeds with immutable audit trails that prevent double-selling.
                    </p>
                  </div>
                  <div
                    style="background: rgb(255, 255, 255); border: 1px solid rgba(26, 60, 40, 0.1); border-top: 2.5px solid rgb(184, 144, 64); border-radius: 10px; padding: 14px 14px;"
                  >
                    <div
                      style="width: 28px; height: 28px; background: rgba(184, 144, 64, 0.1); border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 9px;"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-map-pin"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        style="width: 14px; height: 14px; color: rgb(184, 144, 64);"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      style="font-family: "IBM Plex Mono", monospace; font-size: 8px; letter-spacing: 0.18em; color: rgb(184, 144, 64); margin-bottom: 4px;"
                    >
                      DIASPORA
                    </div>
                    <h4
                      style="font-family: "Fraunces", serif; font-size: 0.83rem; font-weight: 400; color: rgb(26, 60, 40); margin-bottom: 5px;"
                    >
                      Diaspora Ready
                    </h4>
                    <p
                      style="font-size: 10px; color: rgba(26, 60, 40, 0.55); line-height: 1.5;"
                    >
                      Geo-tagged photos, escrow protection, and remote oversight tools built for international buyers.
                    </p>
                  </div>
                  <div
                    style="background: rgb(255, 255, 255); border: 1px solid rgba(26, 60, 40, 0.1); border-top: 2.5px solid rgb(196, 86, 42); border-radius: 10px; padding: 14px 14px;"
                  >
                    <div
                      style="width: 28px; height: 28px; background: rgba(196, 86, 42, 0.1); border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 9px;"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-trending-up"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        style="width: 14px; height: 14px; color: rgb(196, 86, 42);"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M16 7h6v6"
                        />
                        <path
                          d="m22 7-8.5 8.5-5-5L2 17"
                        />
                      </svg>
                    </div>
                    <div
                      style="font-family: "IBM Plex Mono", monospace; font-size: 8px; letter-spacing: 0.18em; color: rgb(196, 86, 42); margin-bottom: 4px;"
                    >
                      PIPELINE
                    </div>
                    <h4
                      style="font-family: "Fraunces", serif; font-size: 0.83rem; font-weight: 400; color: rgb(26, 60, 40); margin-bottom: 5px;"
                    >
                      14-Stage Pipeline
                    </h4>
                    <p
                      style="font-size: 10px; color: rgba(26, 60, 40, 0.55); line-height: 1.5;"
                    >
                      Full document visibility at every legal stage with milestone escrow releases.
                    </p>
                  </div>
                </div>
                <div
                  style="border: 1px solid rgba(26, 60, 40, 0.12); border-radius: 10px; background: rgba(26, 60, 40, 0.04); padding: 12px 18px; display: flex; align-items: center; gap: 10px; font-size: 12px; color: rgba(26, 60, 40, 0.5); justify-content: center;"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-search"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="width: 14px; height: 14px; flex-shrink: 0;"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21 21-4.34-4.34"
                    />
                    <circle
                      cx="11"
                      cy="11"
                      r="8"
                    />
                  </svg>
                  Enter a location above and click 
                  <strong
                    style="color: rgb(26, 60, 40); font-weight: 600;"
                  >
                    Search
                  </strong>
                   to explore verified properties
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Listings — anonymous mode padding (Spec 001) T004: Forest Command Zone has authenticated padding when token is present (SC-003) 1`] = `
<DocumentFragment>
  <div
    class="bg-[#F2E8D5] min-h-screen"
  >
    <div>
      <div
        class="px-4 md:px-8 pt-8"
        data-testid="forest-command-zone"
        style="background: rgb(26, 60, 40); position: relative; overflow: visible;"
      >
        <div
          class="relative pb-5 overflow-hidden"
          style="border-bottom: 1px solid rgba(242, 232, 213, 0.1);"
        >
          <div
            style="position: absolute; top: -40px; right: -40px; width: 160px; height: 160px; border-radius: 50%; background: rgba(196, 86, 42, 0.07); pointer-events: none;"
          />
          <div
            style="position: absolute; bottom: -20px; right: 80px; width: 100px; height: 100px; border-radius: 50%; background: rgba(0, 232, 122, 0.04); pointer-events: none;"
          />
          <span
            style="font-family: "IBM Plex Mono", monospace; font-size: 10px; letter-spacing: 0.18em; color: rgb(196, 86, 42); text-transform: uppercase;"
          >
            Marketplace · Property Search
          </span>
          <h1
            style="font-family: "Fraunces", serif; font-size: 28px; font-weight: 700; color: rgb(242, 232, 213); line-height: 1.1; margin: 6px 0px 4px;"
          >
            Browse Properties
          </h1>
          <p
            style="color: rgba(242, 232, 213, 0.5); font-size: 14px;"
          >
            Verified listings across Southern Africa
          </p>
        </div>
        <div
          class="flex flex-col lg:flex-row gap-1.5 p-2"
        >
          <div
            class="relative shrink-0"
          >
            <button
              aria-label="Listing category"
              class="flex items-center justify-between gap-2 w-full lg:w-auto"
              style="background: rgba(255, 255, 255, 0.06); color: rgb(242, 232, 213); border: 1px solid rgba(255, 255, 255, 0.12); border-radius: 8px; height: 44px; min-width: 130px; padding: 0px 14px; font-size: 14px; font-weight: 500;"
              type="button"
            >
              <span>
                For Sale
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down w-4 h-4 opacity-60"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="relative flex-1 min-w-0"
          >
            <div
              class="px-3 flex items-center gap-2 flex-wrap"
              style="border: 1px solid rgba(255, 255, 255, 0.14); border-radius: 8px; background: rgba(255, 255, 255, 0.04); min-height: 44px;"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-search w-4 h-4 shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="color: rgba(242, 232, 213, 0.5);"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21 21-4.34-4.34"
                />
                <circle
                  cx="11"
                  cy="11"
                  r="8"
                />
              </svg>
              <input
                class="placeholder:text-white/30 py-2.5"
                placeholder="Search location, suburb or city"
                style="background: transparent; outline: none; color: rgb(242, 232, 213); font-size: 14px; min-width: 180px; flex: 1 1 0%;"
                type="text"
                value=""
              />
            </div>
          </div>
          <button
            class="flex items-center gap-2 shrink-0 hover:opacity-90 transition-opacity"
            style="background: rgba(255, 255, 255, 0.06); border: 1px solid rgba(255, 255, 255, 0.12); color: rgb(242, 232, 213); border-radius: 8px; height: 44px; padding: 0px 18px; font-size: 14px; font-weight: 500;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-map w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"
              />
              <path
                d="M15 5.764v15"
              />
              <path
                d="M9 3.236v15"
              />
            </svg>
            Map
          </button>
          <button
            class="flex items-center gap-2 shrink-0 hover:opacity-90 transition-opacity"
            style="background: rgba(242, 232, 213, 0.08); border: 1px solid rgba(242, 232, 213, 0.2); color: rgba(242, 232, 213, 0.85); border-radius: 8px; height: 44px; padding: 0px 18px; font-size: 14px; font-weight: 600;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-mic w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 19v3"
              />
              <path
                d="M19 10v2a7 7 0 0 1-14 0v-2"
              />
              <rect
                height="13"
                rx="3"
                width="6"
                x="9"
                y="2"
              />
            </svg>
            AI Search
            <svg
              aria-hidden="true"
              class="lucide lucide-sparkles w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
              />
              <path
                d="M20 2v4"
              />
              <path
                d="M22 4h-4"
              />
              <circle
                cx="4"
                cy="20"
                r="2"
              />
            </svg>
          </button>
          <button
            class="flex items-center gap-2 shrink-0 hover:opacity-90 transition-opacity"
            style="background: rgb(196, 86, 42); color: white; border-radius: 8px; height: 44px; padding: 0px 28px; font-size: 15px; font-weight: 700;"
            type="button"
          >
            Search
          </button>
        </div>
        <div
          class="flex flex-wrap items-stretch"
          style="border-top: 1px solid rgba(242, 232, 213, 0.1);"
        >
          <div
            class="relative"
          >
            <button
              class="flex items-center gap-2 hover:bg-white/5 transition-colors"
              style="color: rgba(242, 232, 213, 0.75); border-right: 1px solid rgba(255, 255, 255, 0.07); background: transparent; height: 44px; padding: 0px 18px; font-size: 13px; font-weight: 500;"
              type="button"
            >
              Property Type
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down w-3.5 h-3.5 opacity-60"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="relative"
          >
            <button
              class="flex items-center gap-2 hover:bg-white/5 transition-colors"
              style="color: rgba(242, 232, 213, 0.75); border-right: 1px solid rgba(255, 255, 255, 0.07); background: transparent; height: 44px; padding: 0px 18px; font-size: 13px; font-weight: 500;"
              type="button"
            >
              Min Price
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down w-3.5 h-3.5 opacity-60"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="relative"
          >
            <button
              class="flex items-center gap-2 hover:bg-white/5 transition-colors"
              style="color: rgba(242, 232, 213, 0.75); border-right: 1px solid rgba(255, 255, 255, 0.07); background: transparent; height: 44px; padding: 0px 18px; font-size: 13px; font-weight: 500;"
              type="button"
            >
              Max Price
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down w-3.5 h-3.5 opacity-60"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="relative"
          >
            <button
              class="flex items-center gap-2 hover:bg-white/5 transition-colors"
              style="color: rgba(242, 232, 213, 0.75); border-right: 1px solid rgba(255, 255, 255, 0.07); background: transparent; height: 44px; padding: 0px 18px; font-size: 13px; font-weight: 500;"
              type="button"
            >
              Bedrooms
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down w-3.5 h-3.5 opacity-60"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <button
            class="flex items-center gap-2 hover:bg-white/5 transition-colors"
            style="color: rgba(242, 232, 213, 0.75); background: transparent; height: 44px; padding: 0px 18px; font-size: 13px; font-weight: 500; margin-left: auto;"
            type="button"
          >
            More Filters +
          </button>
        </div>
        <div
          class="px-4 py-2.5 flex items-center justify-between gap-4"
          style="border-top: 1px solid rgba(242, 232, 213, 0.1); background: rgba(0, 0, 0, 0.12);"
        >
          <span
            style="font-family: "IBM Plex Mono", monospace; font-size: 11px; color: rgba(242, 232, 213, 0.45);"
          >
            Enter a location and click Search to explore verified properties
          </span>
        </div>
      </div>
      <div
        class="lg:flex lg:items-start lg:gap-6 px-4 md:px-8 py-6"
      >
        <div
          class="bg-card border border-border rounded-lg overflow-hidden h-full flex flex-col lg:flex-row overflow-x-hidden flex-1"
        >
          <div
            class="
          fixed top-0 left-0 bottom-0 z-50
          w-80 max-w-full
          overflow-y-auto overflow-x-hidden
          transition-transform duration-300 ease-out
          -translate-x-full
          p-5
        "
            style="background-color: rgb(26, 60, 40);"
          >
            <div
              class="flex items-center justify-between gap-2 mb-5"
            >
              <div>
                <p
                  class="uppercase mb-1"
                  style="font-family: "IBM Plex Mono", monospace; font-size: 9px; color: rgba(255, 255, 255, 0.5); letter-spacing: 0.12em;"
                >
                  BUILDTRUST
                </p>
                <h2
                  class="text-white text-lg font-bold flex items-center gap-2"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-funnel w-4 h-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="color: rgb(0, 232, 122);"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
                    />
                  </svg>
                  Filters
                </h2>
              </div>
              <div
                class="flex items-center gap-3"
              >
                <button
                  class="text-sm font-medium hover:opacity-80 transition-opacity"
                  style="color: rgb(0, 232, 122);"
                  type="button"
                >
                  Reset All
                </button>
                <button
                  aria-label="Close filters"
                  class="p-1.5 rounded-lg hover:bg-white/10 transition-colors"
                  title="Close filters"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-x w-5 h-5 text-white"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 6 6 18"
                    />
                    <path
                      d="m6 6 12 12"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="mb-4 pb-4"
              style="border-bottom: 1px solid rgba(255, 255, 255, 0.1);"
            >
              <label
                class="flex items-center justify-between cursor-pointer"
              >
                <div
                  class="flex items-center gap-2"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-shield w-4 h-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="color: rgb(0, 232, 122);"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                    />
                  </svg>
                  <span
                    class="text-white text-sm font-medium"
                  >
                    Verified Only
                  </span>
                </div>
                <input
                  class="toggle"
                  style="accent-color: #00E87A;"
                  type="checkbox"
                />
              </label>
            </div>
            <div
              class="mb-4 pb-4"
              style="border-bottom: 1px solid rgba(255, 255, 255, 0.1);"
            >
              <p
                class="uppercase mb-2"
                style="font-family: "IBM Plex Mono", monospace; font-size: 9px; color: rgba(255, 255, 255, 0.45); letter-spacing: 0.1em;"
              >
                BATHROOMS
              </p>
              <div
                class="space-y-3"
              >
                <div
                  class="flex items-center justify-between"
                >
                  <span
                    class="text-white/70 text-sm"
                  >
                    Min Bathrooms
                  </span>
                  <div
                    class="flex items-center gap-2"
                  >
                    <button
                      class="w-8 h-8 rounded flex items-center justify-center text-white font-bold"
                      style="border: 1px solid rgba(255, 255, 255, 0.2); background-color: rgba(255, 255, 255, 0.08);"
                      type="button"
                    >
                      −
                    </button>
                    <span
                      class="w-12 text-center text-white text-sm font-semibold"
                    >
                      0+
                    </span>
                    <button
                      class="w-8 h-8 rounded flex items-center justify-center text-white font-bold"
                      style="border: 1px solid rgba(255, 255, 255, 0.2); background-color: rgba(255, 255, 255, 0.08);"
                      type="button"
                    >
                      +
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mb-5"
            >
              <p
                class="uppercase mb-2"
                style="font-family: "IBM Plex Mono", monospace; font-size: 9px; color: rgba(255, 255, 255, 0.45); letter-spacing: 0.1em;"
              >
                FEATURES
              </p>
              <div
                class="space-y-2.5"
              >
                <label
                  class="flex items-center gap-3 cursor-pointer"
                >
                  <input
                    style="accent-color: #00E87A; width: 16px; height: 16px;"
                    type="checkbox"
                  />
                  <span
                    class="text-white/80 text-sm"
                  >
                    Pool
                  </span>
                </label>
                <label
                  class="flex items-center gap-3 cursor-pointer"
                >
                  <input
                    style="accent-color: #00E87A; width: 16px; height: 16px;"
                    type="checkbox"
                  />
                  <span
                    class="text-white/80 text-sm"
                  >
                    Garden
                  </span>
                </label>
                <label
                  class="flex items-center gap-3 cursor-pointer"
                >
                  <input
                    style="accent-color: #00E87A; width: 16px; height: 16px;"
                    type="checkbox"
                  />
                  <span
                    class="text-white/80 text-sm"
                  >
                    Pet Friendly
                  </span>
                </label>
                <label
                  class="flex items-center gap-3 cursor-pointer"
                >
                  <input
                    style="accent-color: #00E87A; width: 16px; height: 16px;"
                    type="checkbox"
                  />
                  <span
                    class="text-white/80 text-sm"
                  >
                    Security Estate
                  </span>
                </label>
              </div>
            </div>
            <div
              class="mt-6 space-y-3"
            >
              <button
                class="w-full h-11 rounded-lg font-bold text-sm flex items-center justify-center gap-2 hover:opacity-90 transition-opacity"
                style="background-color: rgb(0, 232, 122); color: rgb(12, 13, 16);"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-search w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 21-4.34-4.34"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="8"
                  />
                </svg>
                Apply Filters
              </button>
              <button
                class="w-full h-11 rounded-lg text-white font-semibold text-sm flex items-center justify-center gap-2 hover:opacity-90 transition-opacity"
                style="background-color: rgb(196, 86, 42);"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-mic w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 19v3"
                  />
                  <path
                    d="M19 10v2a7 7 0 0 1-14 0v-2"
                  />
                  <rect
                    height="13"
                    rx="3"
                    width="6"
                    x="9"
                    y="2"
                  />
                </svg>
                AI Voice Search
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sparkles w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                  />
                  <path
                    d="M20 2v4"
                  />
                  <path
                    d="M22 4h-4"
                  />
                  <circle
                    cx="4"
                    cy="20"
                    r="2"
                  />
                </svg>
              </button>
              <p
                class="text-center"
                style="font-family: "IBM Plex Mono", monospace; font-size: 10px; color: rgba(255, 255, 255, 0.35);"
              >
                Try: “3 bed house in Cape Town with pool”
              </p>
            </div>
          </div>
          <div
            class="flex-1 flex flex-col min-w-0"
          >
            <div
              class="flex-1 flex flex-col items-center justify-center p-6 md:p-12"
              style="background: rgb(242, 232, 213); position: relative; overflow: hidden;"
            >
              <div
                style="position: absolute; inset: 0; background-image: linear-gradient(rgba(26,60,40,0.04) 1px, transparent 1px), linear-gradient(90deg, rgba(26,60,40,0.04) 1px, transparent 1px); background-size: 28px 28px; pointer-events: none;"
              />
              <div
                class="max-w-2xl w-full text-center"
                style="position: relative; z-index: 1;"
              >
                <div
                  style="width: 58px; height: 58px; background: rgba(26, 60, 40, 0.07); border: 1px solid rgba(26, 60, 40, 0.18); border-radius: 15px; display: flex; align-items: center; justify-content: center; margin: 0px auto 22px;"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-shield"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="width: 26px; height: 26px; color: rgb(26, 60, 40);"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                    />
                  </svg>
                </div>
                <div
                  style="font-family: "IBM Plex Mono", monospace; font-size: 10px; letter-spacing: 0.22em; color: rgb(196, 86, 42); margin-bottom: 12px;"
                >
                  PROPERTY MARKETPLACE — VERIFIED LISTINGS
                </div>
                <h2
                  style="font-family: "Fraunces", serif; font-size: clamp(1.5rem, 3vw, 2rem); font-weight: 300; color: rgb(26, 60, 40); line-height: 1.25; margin-bottom: 12px;"
                >
                  Your 
                  <span
                    style="color: rgb(196, 86, 42);"
                  >
                    Trusted
                  </span>
                  <br />
                  Property Platform
                </h2>
                <p
                  style="font-size: 13px; color: rgba(26, 60, 40, 0.6); line-height: 1.65; max-width: 320px; margin: 0px auto 28px;"
                >
                  BuildTrust combines financial-grade transparency with real estate intelligence — protecting buyers, sellers, and diaspora investors from fraud.
                </p>
                <div
                  class="grid grid-cols-1 sm:grid-cols-3 gap-3 text-left mb-5"
                >
                  <div
                    style="background: rgb(255, 255, 255); border: 1px solid rgba(26, 60, 40, 0.1); border-top: 2.5px solid rgb(26, 60, 40); border-radius: 10px; padding: 14px 14px;"
                  >
                    <div
                      style="width: 28px; height: 28px; background: rgba(26, 60, 40, 0.08); border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 9px;"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-shield"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        style="width: 14px; height: 14px; color: rgb(26, 60, 40);"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                        />
                      </svg>
                    </div>
                    <div
                      style="font-family: "IBM Plex Mono", monospace; font-size: 8px; letter-spacing: 0.18em; color: rgb(26, 60, 40); margin-bottom: 4px;"
                    >
                      PROTECTION
                    </div>
                    <h4
                      style="font-family: "Fraunces", serif; font-size: 0.83rem; font-weight: 400; color: rgb(26, 60, 40); margin-bottom: 5px;"
                    >
                      Fraud Protection
                    </h4>
                    <p
                      style="font-size: 10px; color: rgba(26, 60, 40, 0.55); line-height: 1.5;"
                    >
                      Verified against title deeds with immutable audit trails that prevent double-selling.
                    </p>
                  </div>
                  <div
                    style="background: rgb(255, 255, 255); border: 1px solid rgba(26, 60, 40, 0.1); border-top: 2.5px solid rgb(184, 144, 64); border-radius: 10px; padding: 14px 14px;"
                  >
                    <div
                      style="width: 28px; height: 28px; background: rgba(184, 144, 64, 0.1); border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 9px;"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-map-pin"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        style="width: 14px; height: 14px; color: rgb(184, 144, 64);"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      style="font-family: "IBM Plex Mono", monospace; font-size: 8px; letter-spacing: 0.18em; color: rgb(184, 144, 64); margin-bottom: 4px;"
                    >
                      DIASPORA
                    </div>
                    <h4
                      style="font-family: "Fraunces", serif; font-size: 0.83rem; font-weight: 400; color: rgb(26, 60, 40); margin-bottom: 5px;"
                    >
                      Diaspora Ready
                    </h4>
                    <p
                      style="font-size: 10px; color: rgba(26, 60, 40, 0.55); line-height: 1.5;"
                    >
                      Geo-tagged photos, escrow protection, and remote oversight tools built for international buyers.
                    </p>
                  </div>
                  <div
                    style="background: rgb(255, 255, 255); border: 1px solid rgba(26, 60, 40, 0.1); border-top: 2.5px solid rgb(196, 86, 42); border-radius: 10px; padding: 14px 14px;"
                  >
                    <div
                      style="width: 28px; height: 28px; background: rgba(196, 86, 42, 0.1); border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 9px;"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-trending-up"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        style="width: 14px; height: 14px; color: rgb(196, 86, 42);"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M16 7h6v6"
                        />
                        <path
                          d="m22 7-8.5 8.5-5-5L2 17"
                        />
                      </svg>
                    </div>
                    <div
                      style="font-family: "IBM Plex Mono", monospace; font-size: 8px; letter-spacing: 0.18em; color: rgb(196, 86, 42); margin-bottom: 4px;"
                    >
                      PIPELINE
                    </div>
                    <h4
                      style="font-family: "Fraunces", serif; font-size: 0.83rem; font-weight: 400; color: rgb(26, 60, 40); margin-bottom: 5px;"
                    >
                      14-Stage Pipeline
                    </h4>
                    <p
                      style="font-size: 10px; color: rgba(26, 60, 40, 0.55); line-height: 1.5;"
                    >
                      Full document visibility at every legal stage with milestone escrow releases.
                    </p>
                  </div>
                </div>
                <div
                  style="border: 1px solid rgba(26, 60, 40, 0.12); border-radius: 10px; background: rgba(26, 60, 40, 0.04); padding: 12px 18px; display: flex; align-items: center; gap: 10px; font-size: 12px; color: rgba(26, 60, 40, 0.5); justify-content: center;"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-search"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="width: 14px; height: 14px; flex-shrink: 0;"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21 21-4.34-4.34"
                    />
                    <circle
                      cx="11"
                      cy="11"
                      r="8"
                    />
                  </svg>
                  Enter a location above and click 
                  <strong
                    style="color: rgb(26, 60, 40); font-weight: 600;"
                  >
                    Search
                  </strong>
                   to explore verified properties
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
